<resources>
    <string name="app_name">Proyecto4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pregunta_tipo_pizza">¿Qué tipo de pizza te gustaría tomar?</string>
    <string name="pizza_sabor">Margarita</string>
    <string name="pizza_sabor2">Carbonara</string>
    <string name="Pizza_sabor4">Romana</string>
    <string name="pizza_sabor3">Cuatro estaciones</string>
    <string name="pizza_sabor5">Barbacoa</string>
    <string name="preguntas_extras">Elige los extras que quieras añadir</string>
    <string name="q1">queso</string>
    <string name="j1">jamón</string>
    <string name="c1">cebolla</string>
    <string name="s1">salsa</string>
    <string name="eligeBebida">elige tu bebida</string>
</resources>