<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsin_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/material_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/pizzeria"
                app:layout_collapseMode="parallax" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/nested_scroll_view">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".FormularioFragment">


            <TextView
                android:id="@+id/txtPreguntaTipoPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pregunta_tipo_pizza"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="73dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrera1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="grupoBotones" />

            <RadioGroup
                android:id="@+id/grupoBotones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/txtPreguntaTipoPizza">

                <RadioButton
                    android:id="@+id/optPizza1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_sabor" />

                <RadioButton
                    android:id="@+id/optPizza3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_sabor3" />

                <RadioButton
                    android:id="@+id/optPizza4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pizza_sabor4" />

                <RadioButton
                    android:id="@+id/optPizza2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_sabor2" />

                <RadioButton
                    android:id="@+id/optPizza5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_sabor5" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/preguntas_extras"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/barrera1" />

            <TextView
                android:id="@+id/txtpreguntabebida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/eligeBebida"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/barrera2" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrera2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="chipExtra4,chipExtra2,chipExtra3,chipExtra1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipExtra4"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/s1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/chipExtra3"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipExtra2"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/j1"
                app:layout_constraintBottom_toBottomOf="@+id/chipExtra3"
                app:layout_constraintEnd_toStartOf="@+id/chipExtra3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/chipExtra1"
                app:layout_constraintTop_toTopOf="@+id/chipExtra3"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipExtra3"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c1"
                app:layout_constraintBottom_toBottomOf="@+id/chipExtra4"
                app:layout_constraintEnd_toStartOf="@+id/chipExtra4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/chipExtra2"
                app:layout_constraintTop_toTopOf="@+id/chipExtra4"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipExtra1"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                app:layout_constraintBottom_toBottomOf="@+id/chipExtra2"
                app:layout_constraintEnd_toStartOf="@+id/chipExtra2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/chipExtra2"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/btnBebida1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                android:scrollbarSize="7dp"
                app:srcCompat="@drawable/bebida2"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/btnBebida2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/bebida1"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/btnBebida3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/bebida3"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/btnBebida4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/bebida4"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/btnBebida5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/bebida5"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/btnBebida6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/bebida6"
                tools:src="@tools:sample/avatars" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:constraint_referenced_ids="btnBebida2,btnBebida6,btnBebida1,btnBebida5,btnBebida4,btnBebida3"
                app:flow_horizontalGap="8dp"
                app:flow_horizontalStyle="spread"
                app:flow_wrapMode="chain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtpreguntabebida" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Escribe tu dirección"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/flow" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Escribe tu nombre"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Escribe tu teléfono"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/editTextText" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="He leído los términos y condiciones de la app y estoy de acuerdo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/editTextText2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEnviar"
        android:src="@android:drawable/ic_input_add"
        app:layout_anchor="@id/collapsin_toolbar_layout"
        app:layout_anchorGravity="bottom|end"
        android:layout_margin="16dp">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

